--- a/othersPage/hello.html
+++ b/othersPage/hello.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <a href="/index.html"></a>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
 </head>
 <body>
     <h1>Beautiful Hermanix!!!!!!!!!!! &#128583&#128081</h1>
     <div class="images">
-        <img src="/petra3.jpeg" alt="">
+        <img src="/img/petra2.jpeg" alt="">
     </div>
 </body>
 </html>
