--- a/othersPage/paris.html
+++ b/othersPage/paris.html
@@ -6,6 +6,6 @@
     <title>Again Again Hermanix!!!!!</title>
 </head>
 <body>
-    <h1>Again Again Hermanix &#128583&#128081 Your always the king &#128081 </h1>
+    <img src="/img/paris.jpeg" alt="">
 </body>
 </html>
