--- a/othersPage/helloTest.html
+++ b/othersPage/helloTest.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hermanix</title>
+    <title>Document</title>
 </head>
 <body>
-        <img src="/img/beautifulisreal.jpeg" alt="">
+    <h1>welcome to hello</h1>
 </body>
 </html>
