finished my first website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="logo">
-            <h2>Clark</h2>
+            <li>
+                <h2 class="javascriptButtons" onclick="scrollingToAboutSection('home')">Clark</h2>
+            </li>
         </div>
         <nav class="navbar">
             <ul class="nav-links" id="nav-links">
@@ -45,14 +47,14 @@
             </div>
         </nav>
     </header>
-    <div class="first-part">
+    <div class="first-part" id="home">
         <div class="left-first-part">
             <div class="hello">
                 <p class="hi">
                     Simple and Elegant
                 </p>
                 <p class="nameDeveloper">
-                    Lavish
+                    White
                 </p>
                 <div class="name" style="opacity: 1;">
                     UI & UX Specialist
@@ -71,9 +73,6 @@
             <img class="images-1" src="/img/hello-people.jpeg" alt="">
         </div>
     </div>
-
-    <button></button>
-
     <div class="secondSection" id="about">
         <!-- <div class="rightSecondSection">
                 <div class="title">
